examples/pure/errors/assert2.sme
proc test ()
    const c: int = 0;
{
    assert("Assertion failed!", c == 1);
}

network i () {
    instance _ of test ();
}
